--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -253,6 +253,7 @@ h3 {
     height: 930px;
     margin-top: 45px;
     margin-left: 40px;
+    gap: 4px 40px;
 }
 .pet-card {
     display: flex;
@@ -328,7 +329,7 @@ h3 {
     line-height: 22.1px;
     letter-spacing: 1px;
 }
-.pet-img-big {
+.pet-picture {
     object-fit: cover;
     width: 270px;
     height: 270px;
@@ -351,6 +352,17 @@ h3 {
     align-items: center;
     transition: background-color 0.3s;
 }
+.button-arrow-right-inactive {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    border-radius: 100px;
+    background-color: #F6F6F6;
+    border: 2px solid #CDCDCD;
+    align-items: center;
+    margin-left: 20px;
+}
+
 .button-arrow-inactive {
     display: flex;
     width: 48px;
@@ -360,7 +372,7 @@ h3 {
     border: 2px solid #CDCDCD;
     align-items: center;
 }
-#button-arrow-inactive-margin {
+#button-arrow-left {
     margin-left: 20px;
 }
 #one-arrow {
@@ -393,6 +405,65 @@ h3 {
     font-size: 20px;
     line-height: 23px;
     color: #292929;
+}
+.button-arrow-left {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    border-radius: 100px;
+    background-color: #F6F6F6;
+    border: 2px solid #F1CDB3;
+    align-items: center;
+    margin-left: 20px;
+    transition: background-color 0.3s;
+}
+.button-arrow-left:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
+}
+.button-double-arrow-left {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    border-radius: 100px;
+    background-color: #F6F6F6;
+    border: 2px solid #F1CDB3;
+    align-items: center;
+    transition: background-color 0.3s;
+}
+.button-double-arrow-left:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
+}
+.button-double-arrow-right {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    border-radius: 100px;
+    background-color: #F6F6F6;
+    border: 2px solid #F1CDB3;
+    align-items: center;
+    margin-left: 20px;
+    transition: background-color 0.3s;
+}
+.button-double-arrow-right:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
+}
+.button-arrow-right {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    border-radius: 100px;
+    background-color: #F6F6F6;
+    border: 2px solid #F1CDB3;
+    align-items: center;
+    margin-left: 20px;
+    transition: background-color 0.3s;
+}
+.button-arrow-right:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
 }
 .button-arrow-active {
     display: flex;
@@ -486,7 +557,7 @@ h3 {
     .navigation {
         margin-left: 7px;
     }
-    #button-arrow-inactive-margin {
+    #button-arrow-left {
         margin-left: 10px;
     }
     body > div.pets > div.navigation > div.button-number {
@@ -678,4 +749,99 @@ footer {
         padding-right: 0px;
         margin-right: 30px;
     }
+}
+
+.popup {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1000;
+}
+.popup-active {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 27%;
+    z-index: 100;
+}
+.popup-card {
+    display: flex;
+    width: 900px;
+    height: 500px;
+    background-color: #FAFAFA;
+    border-radius: 1%;
+}
+.popup-pet-picture {
+    width: 500px;
+    height: 500px;
+}
+.popup-logo-title {
+    width: 145px;
+    height: 45px;
+    margin-top: 50px;
+    margin-left: 30px;
+}
+.popup-logo-subtitle {
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23px;
+    margin-top: 10px;
+    margin-left: 30px;
+    letter-spacing: 0.06em;
+}
+.popup-description {
+    margin-top: 40px;
+    margin-left: 30px;
+}
+.popup-description-text {
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 16.5px;
+    letter-spacing: 0.09em;
+}
+.popup-list {
+    margin-top: 42px;
+    margin-left: 6px;   
+}
+li::marker {
+    color: #F1CDB3;
+  }
+
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.3;
+}
+.popup-overlay.active {
+    display: block;
+}
+body.noscroll {
+    overflow: hidden;
+}
+.close-button {
+    display: flex;
+    width: 52px;
+    height: 52px;
+    border-radius: 100px;
+    border: 2px solid #F1CDB3;
+    align-items: center;
+    margin-left: 900px;
+    transition: background-color 0.3s;
+}
+
+.close-button:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
+}
+body > div > div.popup-active > div.close-button > svg {
+    margin-left: 20px;
+    margin-top: 1px;
 }
