--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -1,10 +1,34 @@
 .audio-player {
     width: 300px;
-    height: 200px;
+    height: 400px;
     border: 3px solid black;
+}
+.audio-background {
+    height: 250px;
+    border: 3px solid black;
+    background-size: cover;
+}
+
+.artist-name {
+    margin: 0;
+}
+.song-name {
+    margin: 0;
 }
 .start {
     display: block;
+}
+.buttons {
+    display: flex;
+}
+.forward-button {
+    width: 30px;
+}
+.backward-button {
+    width: 30px;
+}
+.play-button {
+    width: 30px;
 }
 #start-button {
     width: 30px;
@@ -29,8 +53,23 @@
     display: none;
 }
 #controls {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+#controls:hover {
+    opacity: 1;
+}
+#controls::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: red;
+    cursor: pointer;
 }
