--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -2,7 +2,11 @@
     width: 300px;
     height: 400px;
     border: 3px solid black;
+    position: static;
+    margin: 5em auto;
+    border-radius: 2%;
 }
+
 .audio-background {
     height: 250px;
     border: 3px solid black;
@@ -10,66 +14,128 @@
 }
 
 .artist-name {
+    font-family: sans-serif;
+    color: rgb(173, 24, 62);
     margin: 0;
 }
+
 .song-name {
+    font-family: sans-serif;
     margin: 0;
 }
+
+.duration {
+    color: rgb(173, 24, 62);
+    margin-left: 270px;
+}
+
 .start {
     display: block;
 }
+
 .buttons {
     display: flex;
 }
+
 .forward-button {
     width: 30px;
 }
+
 .backward-button {
     width: 30px;
 }
+
 .play-button {
     width: 30px;
 }
+
 #start-button {
     width: 30px;
     height: 30px;
+    cursor: pointer;
 }
+
 #stop-button {
     width: 30px;
     height: 30px;
+    cursor: pointer;
 }
+
 #backward {
     width: 30px;
     height: 30px;
+    cursor: pointer;
+    margin-left: 3px;
 }
+
 #forward {
     width: 30px;
     height: 30px;
+    cursor: pointer;
+    margin-left: 5px;
 }
+
 .stop {
     display: none;
 }
+
 .song-number {
     display: none;
 }
-#controls {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 25px;
+
+.track-slider {
+    appearance: none;
+    width: 295px;
+    height: 20px;
     background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+    cursor: pointer;
 }
-#controls:hover {
-    opacity: 1;
-}
-#controls::-webkit-slider-thumb {
+
+.track-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 25px;
+    width: 20px;
     height: 25px;
-    background: red;
+    background: #4CAF50;
     cursor: pointer;
+}
+
+.volume {
+    margin-top: -2px;
+    cursor: pointer;
+    margin-left: 3px;
+}
+
+#vlome-down {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+}
+
+#vlome-up {
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(167, 230, 230, 0.863);
+}
+
+.text-box {
+    margin-left: 20px;
+}
+
+.logo {
+    margin-top: 6px;
+    margin-right: 20px;
+    width: 40px;
+    height: 40px;
 }
