--- a/random-game/style.css
+++ b/random-game/style.css
@@ -3,8 +3,57 @@
     margin: 0 auto;
 }
 .main-screen{
+    display: flex;
     width: 60%; 
     margin: 0 auto;
     height: 600px; 
     border: 1px solid black;
+    background-image: url(assets/img/sky.jpg);
+    background-size: cover;
+}
+#start-button {
+    width: 300px;
+    height: 130px;
+    margin-left: 200px;
+}
+#stop-button {
+    width: 300px;
+    height: 130px;
+    margin-left: 50px;
+}
+.img-button{
+    cursor: pointer;
+    width: 300px;
+    height: 130px;
+}
+
+#timer {
+  }
+  .button-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+
+
+  footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(167, 230, 230, 0.863);
+}
+
+.text-box {
+    margin-left: 20px;
+}
+
+.logo {
+    margin-top: 6px;
+    margin-right: 20px;
+    width: 40px;
+    height: 40px;
 }
