--- a/random-game/style.css
+++ b/random-game/style.css
@@ -10,16 +10,21 @@
     border: 1px solid black;
     background-image: url(assets/img/sky.jpg);
     background-size: cover;
+    cursor: crosshair;
+    
+}
+.button-container{
+    margin-top: 40px;
 }
 #start-button {
     width: 300px;
     height: 130px;
-    margin-left: 200px;
+    margin-left: 340px;
 }
 #stop-button {
     width: 300px;
     height: 130px;
-    margin-left: 50px;
+    margin-left: 80px;
 }
 .img-button{
     cursor: pointer;
@@ -28,6 +33,30 @@
 }
 
 #timer {
+    width: 20px;
+    height: 20px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: 40px;
+  }
+  #score-board {
+    width: 170px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border: 1px solid #333;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
   }
   .button-container {
     display: flex;
